--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "wrangler dev"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20250129.0",
 		"wrangler": "^3.106.0"
 	}
 }
