--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "work-task-logger"
-main = "src/src/index.js"
+main = "src/index.ts"
 compatibility_date = "2023-08-23"
 workers_dev = true
 preview_urls = false
